--- a/MeinStudManager/appsettings.Development.json
+++ b/MeinStudManager/appsettings.Development.json
@@ -1,9 +1,9 @@
 {
-  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
+      "Microsoft.AspNetCore.SpaProxy": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   }
