Basic Authorization (Part 1)

--- a/MeinStudManager/appsettings.json
+++ b/MeinStudManager/appsettings.json
@@ -1,10 +1,16 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "JWTSettings": {
+    "securityKey": "SuperSecretSampleDevelopmentKey",
+    "validIssuer": "MeinStudManagerAPI",
+    "validAudience": "https://localhost:5011",
+    "expiryInMinutes": 5
+  },
+  "AllowedHosts": "*"
 }
