--- a/MeinStudManager/ClientApp/package.json
+++ b/MeinStudManager/ClientApp/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser-dynamic": "~12.2.2",
     "@angular/platform-server": "~12.2.2",
     "@angular/router": "~12.2.2",
-    "bootstrap": "^5.1.0",
+    "bootstrap": "^5.1.3",
     "jquery": "^3.5.1",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.2",
-    "@angular/cli": "~12.2.2",
+    "@angular/cli": "^13.1.4",
     "@angular/compiler-cli": "~12.2.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
@@ -46,6 +46,5 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "typescript": "~4.2.3"
-  },
-  "optionalDependencies": {}
+  }
 }
