--- a/MeinStudManager/ClientApp/package.json
+++ b/MeinStudManager/ClientApp/package.json
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.2",
-    "@angular/cli": "^13.1.4",
+    "@angular/cli": "~12.2.2",
     "@angular/compiler-cli": "~12.2.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
