--- a/MeinStudManager/ClientApp/package.json
+++ b/MeinStudManager/ClientApp/package.json
@@ -26,6 +26,7 @@
     "@syncfusion/ej2-angular-schedule": "^19.4.48",
     "bootstrap": "^5.1.3",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.19",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
