--- a/MeinStudManager/ClientApp/package.json
+++ b/MeinStudManager/ClientApp/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.1.3",
     "jquery": "^3.5.1",
     "lodash": "^4.17.19",
+    "mdb-angular-ui-kit": "^2.0.0",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
@@ -42,6 +43,7 @@
     "@angular/compiler-cli": "~12.2.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
+    "@types/jquery": "^3.5.14",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
